AA: `get_token` API add runtime_data paramter
